components/navBar.module.css
.container {
  display: flex;
  justify-content: center;
  column-gap: 9vw;
  align-items: flex-end;
  background-color: #c2def4;
}
.lists {
  list-style: none;
  display: flex;
  column-gap: 2vw;
  flex-wrap: wrap;
  cursor: pointer;
}
.lists > *:hover {
  color: white;
}
.title {
  width: 5vw;
  cursor: pointer;
}

@media screen and (max-width: 500px) {
  .container {
    flex-direction: column;
    column-gap: unset;
    align-items: flex-start;
  }
  .title {
    width: 68vw;
    margin-left: 4vw;
  }
  .lists {
    gap: 3vw;
    align-self: center;
  }
}

